
* RubyCollections#Hash can now take RubyArray of List


Version 1.6.0

+ Added RubyObject#send

+ Most of the TransformBlocks in RubyCollect4J can now be replaced with method name and arguments (invoke method using Reflection)

+ Refactor code by adding RubyContract::Enumerable & RubyContract::Enumerator interfaces


Version 1.6.1

* Added RubyFile::size & RubyFile::expandPath(file, dir)

* Fixed the remove logic of StepIterator

* Fixed the potential bug of RubyArray#pack

* Defensive copies are made while constructing CombinationIterator, PermutationIterator, RepeatedCombinationIterator, RepeatedPermutationIterator, ProductIterator and ZipIterator

* RubyRnumerable#sortBy & RubyArray#sortBy! are no longer to do the second sorting on the elements which get the same transformed value


Version 1.6.2

+ Added @SafeVarargs annotations

* RubyArray#last(int n) throws IllegalArgumentException if n is < 0

* Reimplemented LinkedIdentityMap

* RubyEnumerable#allʔ, anyʔ, oneʔ do not check Boolean.False anymore

* Fixed the bug of RubyEnumerable#findIndex while finding the index of a null object 


Version 1.6.3

* Avoided file lock by initiating EachLineIterator lazily


Version 1.7.0

+ Added RubyString

+ Added CharacterSuccessor and extended RubyRange by it

+ Added RubyCollections#isBlank & RubyCollections#isNotBlank

* Corrected the behavior of RubyArray#pack & RubyString#unpack

* Fixed the bug of RubyArray#insert while using negative index

+ Added Serializable to RubyArray, RubyHash, RubyRange & RubyString


Version 1.7.1

* Used bounded wildcards to increased API flexibility


Version 1.7.2

+ Added static factory methods #of, #copyOf to RubyArray and RubyHash

* Deprecated RubyCollections#newRubyArray(List, boolean) and  RubyCollections#newRubyHash(LinkedHashMap, boolean)

- Removed RubyString#chars to solve the API conflict with Java 8 CharSequence


Version 1.7.3

* Fixed RubyString#unpack Directive H,h,B,b bugs