@@ -64,13 +64,13 @@ public class RubyKernelTest {
   }
 
   @Test
-  public void testPutsNothing() {
+  public void testPNothing() {
     assertNull(p());
     assertEquals("", outContent.toString());
   }
 
   @Test
-  public void testPutsObject() {
+  public void testPObject() {
     Object o = new Object();
     assertEquals(o, p(o));
     assertTrue(Pattern.compile("java\\.lang\\.Object")
@@ -78,60 +78,60 @@ public class RubyKernelTest {
   }
 
   @Test
-  public void testPutsObjectWithVarargs() {
+  public void testPObjectWithVarargs() {
     Object o = Integer.valueOf(1);
     assertEquals(ra(o, o), p(o, o));
     assertEquals(ra(o, o, null).join(lineSeparator), outContent.toString());
   }
 
   @Test
-  public void testPutsString() {
+  public void testPString() {
     assertEquals("abc", p("abc"));
     assertEquals("abc" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsStringWithVarargs() {
+  public void testPStringWithVarargs() {
     assertEquals(ra("abc", "def"), p("abc", "def"));
     assertEquals(ra("abc", "def", null).join(lineSeparator),
         outContent.toString());
   }
 
   @Test
-  public void testPutsBoolean() {
+  public void testPBoolean() {
     assertTrue(p(true));
     assertEquals("true" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsBooleanWithVarargs() {
+  public void testPBooleanWithVarargs() {
     assertEquals(ra(true, false), p(true, false));
     assertEquals(ra(true, false, null).join(lineSeparator),
         outContent.toString());
   }
 
   @Test
-  public void testPutsChar() {
+  public void testPChar() {
     assertEquals('x', p('x'));
     assertEquals("x" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsCharWithVarargs() {
+  public void testPCharWithVarargs() {
     assertEquals(ra('x', 'y', 'z'), p('x', 'y', 'z'));
     assertEquals(ra('x', 'y', 'z', null).join(lineSeparator),
         outContent.toString());
   }
 
   @Test
-  public void testPutsCharArray() {
+  public void testPCharArray() {
     assertArrayEquals(new char[] { 'x', 'y', 'z' }, p(new char[] { 'x', 'y',
         'z' }));
     assertEquals("xyz" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsCharArrayWithVarargs() {
+  public void testPCharArrayWithVarargs() {
     char[] xyz = new char[] { 'x', 'y', 'z' };
     assertEquals(ra(xyz, xyz), p(xyz, xyz));
     assertEquals("xyz" + lineSeparator + "xyz" + lineSeparator,
@@ -139,54 +139,104 @@ public class RubyKernelTest {
   }
 
   @Test
-  public void testPutsDouble() {
+  public void testPDouble() {
     assertEquals(1.0, p(1.0), 0.0);
     assertEquals("1.0" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsDoubleWithVarargs() {
+  public void testPDoubleWithVarargs() {
     assertEquals(ra(1.0, 2.0, 3.0), p(1.0, 2.0, 3.0));
     assertEquals(ra(1.0, 2.0, 3.0, null).join(lineSeparator),
         outContent.toString());
   }
 
   @Test
-  public void testPutsFloat() {
+  public void testPFloat() {
     assertEquals(1.0f, p(1.0f), 0.0f);
     assertEquals("1.0" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsFloatWithVarargs() {
+  public void testPFloatWithVarargs() {
     assertEquals(ra(1.0f, 2.0f, 3.0f), p(1.0f, 2.0f, 3.0f));
     assertEquals(ra(1.0f, 2.0f, 3.0f, null).join(lineSeparator),
         outContent.toString());
   }
 
   @Test
-  public void testPutsInt() {
+  public void testPInt() {
     assertEquals(1, p(1));
     assertEquals("1" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsIntWithVarargs() {
+  public void testPIntWithVarargs() {
     assertEquals(ra(1, 2, 3), p(1, 2, 3));
     assertEquals(ra(1, 2, 3, null).join(lineSeparator), outContent.toString());
   }
 
   @Test
-  public void testPutsLong() {
+  public void testPLong() {
     assertEquals(1L, p(1L));
     assertEquals("1" + lineSeparator, outContent.toString());
   }
 
   @Test
-  public void testPutsLongWithVarargs() {
+  public void testPLongWithVarargs() {
     assertEquals(ra(1L, 2L, 3L), p(1L, 2L, 3L));
     assertEquals(ra(1L, 2L, 3L, null).join(lineSeparator),
         outContent.toString());
+  }
+
+  @Test
+  public void testPByteArray() {
+    assertArrayEquals(new byte[] { (byte) 0xFF, (byte) 0x00 }, p(new byte[] {
+        (byte) 0xFF, (byte) 0x00 }));
+    assertEquals(ra(-1, 0) + lineSeparator, outContent.toString());
+  }
+
+  @Test
+  public void testPShortArray() {
+    assertArrayEquals(new short[] { (short) 1, (short) 0 }, p(new short[] {
+        (short) 1, (short) 0 }));
+    assertEquals(ra(1, 0) + lineSeparator, outContent.toString());
+  }
+
+  @Test
+  public void testPIntArray() {
+    assertArrayEquals(new int[] { 1, 0 }, p(new int[] { 1, 0 }));
+    assertEquals(ra(1, 0) + lineSeparator, outContent.toString());
+  }
+
+  @Test
+  public void testPLongArray() {
+    assertArrayEquals(new long[] { 1L, 0L }, p(new long[] { 1L, 0L }));
+    assertEquals(ra(1L, 0L) + lineSeparator, outContent.toString());
+  }
+
+  @Test
+  public void testPFloatArray() {
+    assertArrayEquals(new float[] { (float) 1, (float) 0 }, p(new float[] {
+        (float) 1, (float) 0 }), (float) 0);
+    assertEquals(ra((float) 1, (float) 0) + lineSeparator,
+        outContent.toString());
+  }
+
+  @Test
+  public void testPDoubleArray() {
+    assertArrayEquals(new double[] { 1.0, 0.0 }, p(new double[] { 1.0, 0.0 }),
+        0.0);
+    assertEquals(ra(1.0, 0.0) + lineSeparator, outContent.toString());
+  }
+
+  @Test
+  public void testPBooleanArray() {
+    boolean[] bools = p(new boolean[] { true, false });
+    assertEquals(2, bools.length);
+    assertEquals(true, bools[0]);
+    assertEquals(false, bools[1]);
+    assertEquals(ra(true, false) + lineSeparator, outContent.toString());
   }
 
 }
